syntax = "proto3";

option go_package = "./;proto";

message SimpleRsp{
  int32 code = 1;
  string value = 2;
}

message StreamReq{
  string stream_value = 1;
}

service StreamClient{
  rpc RouteList(stream StreamReq) returns(SimpleRsp);
}